src/objects/Other_adults_in_the_property__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPP_Application__c</fullName>
        <label>HPP Application</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Other adults in the properties</relationshipLabel>
        <relationshipName>Other_adults_in_the_properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_name__c</fullName>
        <label>Last name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_primary_applicant__c</fullName>
        <label>Relationship to primary applicant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Husband</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Relation</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Wife</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Other adults in the property</label>
    <nameField>
        <displayFormat>AP{0000}</displayFormat>
        <label>Other adults in the property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other adults in the properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>